Fix blank bottom (image not covered)

--- a/css/style(595-1150).css
+++ b/css/style(595-1150).css
@@ -18,7 +18,7 @@ div.background1::before {
     filter: blur(3px);
     content: '';
     width: 100%;
-    height: 100%;
+    height: 102%;
     position: absolute;
     background-size: cover;
     background-repeat: no-repeat;
